# Co-op3

./: README.md  example  go1capture.pcapng  matlab_plot.cpp  my-folder
Framework/go1_ws/: CMakeLists.txt  create_smb  package.xml
Framework/go1_ws/include/impedance_interface/: impedance_controller.hpp  impedance_controller_bas.hpp  impedance_controller_node.hpp  pid_impedance_controller.hpp  prototype_impedance_controller.hpp  spring_dampener_controller.hpp
Framework/go1_ws/install/: local_setup.sh  setup.sh
Framework/go1_ws/install/impedance_controller_framework/lib/impedance_controller_framework/: test_dummy  test_impedance_controller
Framework/go1_ws/install/impedance_controller_framework/share/impedance_controller_framework/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Framework/go1_ws/install/joint_state_buffer_node/lib/joint_state_buffer_node/: joint_state_buffer_node  torque_command_node
Framework/go1_ws/install/joint_state_buffer_node/share/joint_state_buffer_node/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Framework/go1_ws/log/: latest_build  latest_list  latest_test
Framework/go1_ws/msg/: JointCommand.msg  JointFeedback.msg
Framework/go1_ws/src/: impedance_controller_node.cpp  main.cpp  prototype_default_impedance_controller.cpp  prototype_impedance_controller.cpp  prototype_pid_impedance_controller.cpp  prototype_spring_dampener_impedance_controller.cpp
Framework/go1_ws/src/impedance_controller_framework/: CMakeLists.txt  README.md
Framework/go1_ws/src/impedance_controller_framework/include/: dummy_impedance_controller.hpp  impedance_controller.hpp  impedance_controller_factory.hpp  impedance_controller_manager.hpp
Framework/go1_ws/src/impedance_controller_framework/include/impedance_controller_framework/common/: controller_manager.hpp
Framework/go1_ws/src/impedance_controller_framework/include/impedance_controller_framework/control_interface/: control_context.hpp
Framework/go1_ws/src/impedance_controller_framework/include/impedance_controller_framework/impedance_interface/: impedance_controller_base.hpp  impedance_controller_node.hpp  prototype_impedance_controller.hpp
Framework/go1_ws/src/impedance_controller_framework/include/impedance_interface/: prototype_impedance_controller.hpp
Framework/go1_ws/src/impedance_controller_framework/src/: impedance_controller_factory.cpp  impedance_controller_manager.cpp  impedance_controller_node.cpp  main.cpp  ros2_command_node.cpp
Framework/go1_ws/src/impedance_controller_framework/src/common/: controller_manager.cpp
Framework/go1_ws/src/impedance_controller_framework/src/impedance_interface/: prototype_impedance_controller.cpp
Framework/go1_ws/src/impedance_controller_framework/src/tools/: test_step1.cpp
Framework/go1_ws/src/impedance_controller_framework/test/: dummy_registration.cpp  test_dummy.cpp  test_impedance_controller.cpp
Framework/go1_ws/src/torque_interface/: CMakeLists.txt  package.xml
Framework/go1_ws/src/torque_interface/include/: torque_bridge.hpp
Framework/go1_ws/src/torque_interface/install/: setup.sh
Framework/go1_ws/src/torque_interface/install/joint_state_buffer_node/share/joint_state_buffer_node/: package.bash  (+3 more)
Framework/go1_ws/src/torque_interface/src/: ros2_buffer_node.cpp  ros2_command_node.cpp  torque_bridge.cpp
Framework/go1_ws/src/torque_interface/util/: create_smb.cpp
Framework/go1_ws/unitree_legged_sdk/: CMakeLists.txt
Framework/go1_ws/unitree_legged_sdk/example/: control_joint_angle.cpp  control_joint_position  control_joint_position.cpp  control_joint_torque  control_joint_torque.cpp  control_tip_force.cpp
Framework/go1_ws/unitree_legged_sdk/low_lvl/: torque_feedback.cpp
Framework/go1_ws/unitree_ws/install/go1_description/share/go1_description/: package.sh
Framework/go1_ws/unitree_ws/install/unitree_legged_real/lib/unitree_legged_real/: custom_gait  jsp_high  ros2_walk_example  udp_high  udp_low
Framework/go1_ws/unitree_ws/install/unitree_legged_real/share/unitree_legged_real/: package.sh
Framework/go1_ws/unitree_ws/src/unitree_ros2/unitree_legged_real/src/: ros2_position_example.cpp  ros2_udp.cpp
Framework/unitree_legged_sdk/: CMakeLists.txt  e
Framework/unitree_legged_sdk/example/: control_joint_angle  control_joint_angle.cpp  control_joint_position  control_joint_position.cpp  control_joint_torque  control_joint_torque.cpp  control_tip_force  control_tip_force.cpp  example_position  example_torque
Framework/unitree_legged_sdk/global_def/Impendance_Definitions/: Imp_Def.cpp
Framework/unitree_legged_sdk/include/common/: joint_state_buffer.h
go1_ws/install/unitree_legged_sdk/share/unitree_legged_sdk/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
go1_ws/install/unitree_legged_sdk/share/unitree_legged_sdk/cmake/: unitree_legged_sdkConfig.cmake
unitree_driver_wrapper/: CMakeLists.txt  package.xml
unitree_driver_wrapper/include/unitree_driver_wrapper/: unitree_driver_node.hpp
unitree_driver_wrapper/launch/: unitree_driver_node.launch.py
unitree_driver_wrapper/src/: unitree_driver_node.cpp
unitree_legged_sdk/: CMakeLists.txt
unitree_legged_sdk/example/: example_12_joints  example_12_joints.cpp  example_12_joints_databackMATLAB  example_12_joints_databackMATLAB.cpp  example_jacobian  example_jacobian.cpp  example_joystick  example_position  example_position.cpp  example_position_databack  example_position_databack.cpp  example_position_databackMATLAB  example_position_databackMATLAB.cpp  example_position_hardware  example_position_hardware.cpp  example_torque  example_torque.cpp  example_torque_databack  example_torque_databack.cpp  example_torque_databackMATLAB  example_torque_databackMATLAB.cpp  example_velocity  example_walk  jacobian_calculation  robot_log_1752174898.csv  robot_log_1752174908.csv
unitree_legged_sdk/python_wrapper/: CMakeLists.txt
unitree_ros2_sim/robotic_control/: CMakeLists.txt  package.xml
unitree_ros2_sim/robotic_control/src/: example_jacobian_ros2convert.cpp  example_jacobian_sim.cpp
(+108 files in other folders)
