<package format="3">
  <name>torque_interface</name>
  <version>0.1.0</version>
  <description>ROS 2 node to publish joint states from shared memory buffer and handle torque commands</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
