<?xml version="1.0"?>
<package format="2">
  <name>unitree_legged_sdk</name>
  <version>0.0.1</version>
  <description>The unitree_legged_sdk package.</description>

  <maintainer email="laikago@unitree.cc">Unitree Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
